animations for interpreting runs and visuals of boundary influence

--- a/paper3/animation-Atlantic.ipynb
+++ b/paper3/animation-Atlantic.ipynb
@@ -21,6 +21,7 @@
     "import pickle\n",
     "import matplotlib\n",
     "import xarray as xr\n",
+    "from datetime import datetime\n",
     "import imageio\n",
     "import glob\n",
     "\n",
@@ -76,11 +77,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "years  = np.arange(2002,2020,1) \n",
+    "years  = np.arange(2015,2020,1) \n",
     "files1 = []; files2 = [];\n",
     "for year in years:\n",
     "    folder1 = f'/data/brogalla/run_storage/Pb-reference-202303/Pb-reference-{year}_20230308/'\n",
@@ -92,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,14 +128,14 @@
     "   \n",
     "    proj1.contourf(x, y, bathy_masked[layer,imin:imax,jmin:jmax], colors=[land_color], zorder=1, ax=ax) # Mask land at particular depth\n",
     "\n",
-    "    ax.set_title(f'{dates1[n]}', fontsize=6)\n",
+    "    ax.set_title(datetime.strptime(dates1[n][0:8],\"%Y%M%d\").strftime('%Y-%M-%d'), fontsize=6)\n",
     "    \n",
     "    # Color bar: --------------------------------------------------------------------------------\n",
     "    cbaxes = fig.add_axes([0.10, 0.15, 0.02, 0.38]);\n",
     "    CBar   = plt.colorbar(CB, cax=cbaxes); \n",
     "    CBar.set_label(r'$\\Delta$ Dissolved Pb [pM]', fontsize=7)\n",
     "    CBar.ax.tick_params(axis='y', length=0, labelsize=7)\n",
-    "    CBar.ax.set_yticklabels(['0','0.2','0.4','0.6','0.8','>1.0']) \n",
+    "#     CBar.ax.set_yticklabels(['0','1.0','2.0','3.0','4.0','>5.0']) \n",
     "    return fig"
    ]
   },
@@ -149,28 +150,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "depth = 32 #10, 25, 30, 32\n",
+    "depth = 30 #10, 25, 30, 32\n",
     "for n, date in enumerate(dates1):\n",
-    "    fig = plot_layer(files1[n], files2[n], n, layer=depth, vmin=0, vmax=1)    \n",
-    "    fig.savefig(f'/ocean/brogalla/GEOTRACES/figures/Pb/animation/Atlantic-animation-z{depth}-{date[0:8]}.png', dpi=300)\n",
+    "    fig = plot_layer(files1[n], files2[n], n, layer=depth, vmin=0, vmax=5)    \n",
+    "    fig.savefig(f'/ocean/brogalla/GEOTRACES/figures/Pb/animation/Atlantic-animation-z{depth}-highPb-{date[0:8]}.png', dpi=300)\n",
     "    plt.close(fig)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "layer = 10\n",
+    "layer = 30\n",
     "\n",
     "#https://stackoverflow.com/questions/753190/programmatically-generate-video-or-animated-gif-in-python\n",
-    "filenames = np.sort(glob.glob(f'/ocean/brogalla/GEOTRACES/figures/Pb/animation/Atlantic-animation-z{layer}-*'))\n",
-    "with imageio.get_writer(f'/ocean/brogalla/GEOTRACES/figures/Pb/animation/Atlantic-z{layer}.mp4', \n",
+    "filenames = np.sort(glob.glob(f'/ocean/brogalla/GEOTRACES/figures/Pb/animation/Atlantic-animation-z{layer}-highPb-*'))\n",
+    "with imageio.get_writer(f'/ocean/brogalla/GEOTRACES/figures/Pb/animation/Atlantic-z{layer}-highPb.mp4', \n",
     "                        macro_block_size = None, fps=7, mode='I') as writer:\n",
     "    for filename in filenames:\n",
     "        image = imageio.imread(filename)\n",
