made figures for supplement more consistent

--- a/paper3/S6-regions.ipynb
+++ b/paper3/S6-regions.ipynb
@@ -11,9 +11,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -38,9 +36,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -77,14 +73,12 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
     "# Modified ANHA12 mesh mask file (http://knossos.eas.ualberta.ca/anha/anhatable.php)\n",
-    "mfile        = xr.open_dataset('/ocean/brogalla/GEOTRACES/data/ANHA12/ANHA12_mask_Pb-20220317.nc')\n",
+    "mfile        = xr.open_dataset('/ocean/brogalla/GEOTRACES/data/ANHA12/ANHA12_mask_Pb-20230213.nc')\n",
     "mesh_lon     = mfile['nav_lon'].values\n",
     "mesh_lat     = mfile['nav_lat'].values\n",
     "mask         = mfile['tmask'].values[0]\n",
@@ -96,9 +90,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -125,9 +117,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -186,9 +176,7 @@
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -202,9 +190,7 @@
    "cell_type": "code",
    "execution_count": 51,
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
+    "tags": []
    },
    "outputs": [
     {
