tidied up animation of dense water cascades

--- a/paper3/animation-Atlantic.ipynb
+++ b/paper3/animation-Atlantic.ipynb
@@ -77,11 +77,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "years  = np.arange(2015,2020,1) \n",
+    "years  = np.arange(2002,2010,1) \n",
     "files1 = []; files2 = [];\n",
     "for year in years:\n",
     "    folder1 = f'/data/brogalla/run_storage/Pb-reference-202303/Pb-reference-{year}_20230308/'\n",
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,13 +110,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
     "def plot_layer(file1, file2, n, layer=0, vmin=0, vmax=30):\n",
     "    \n",
-    "    fig, ax, proj1 = pickle.load(open('/ocean/brogalla/GEOTRACES/pickles/LS.pickle','rb'))\n",
+    "#     fig, ax, proj1 = pickle.load(open('/ocean/brogalla/GEOTRACES/pickles/LS.pickle','rb'))\n",
+    "    fig, ax, proj1 = pickle.load(open('/ocean/brogalla/GEOTRACES/pickles/Baffin-Bay-zoom.pickle','rb'))\n",
     "    x, y = proj1(mesh_lon[imin:imax,jmin:jmax], mesh_lat[imin:imax,jmin:jmax]) \n",
     "    \n",
     "    with xr.open_dataset(f'{file1}') as f:\n",
@@ -126,12 +127,16 @@
     "    \n",
     "    CB = proj1.pcolormesh(x, y, (f2-f1)*1e12, cmap=cmocean.cm.rain, vmin=vmin, vmax=vmax, ax=ax, rasterized=True) \n",
     "   \n",
-    "    proj1.contourf(x, y, bathy_masked[layer,imin:imax,jmin:jmax], colors=[land_color], zorder=1, ax=ax) # Mask land at particular depth\n",
-    "\n",
+    "    # proj1.contourf(x, y, bathy_masked[layer,imin:imax,jmin:jmax], colors=[land_color], zorder=1, ax=ax)\n",
+    "    proj1.pcolormesh(x, y, bathy_masked[layer,imin:imax,jmin:jmax], \\\n",
+    "               cmap=matplotlib.colors.ListedColormap([land_color]), zorder=1, ax=ax)\n",
     "    ax.set_title(datetime.strptime(dates1[n][0:8],\"%Y%M%d\").strftime('%Y-%M-%d'), fontsize=6)\n",
     "    \n",
+    "    ax.text(x[200,530], y[200,530], 'Greenland \\n Kalaallit Nunaat', fontsize=5, style='italic')\n",
+    "    ax.text(x[220,300], y[220,300], 'Baffin \\n Island', fontsize=5, style='italic')\n",
+    "    \n",
     "    # Color bar: --------------------------------------------------------------------------------\n",
-    "    cbaxes = fig.add_axes([0.10, 0.15, 0.02, 0.38]);\n",
+    "    cbaxes = fig.add_axes([0.07, 0.13, 0.02, 0.38]);\n",
     "    CBar   = plt.colorbar(CB, cax=cbaxes); \n",
     "    CBar.set_label(r'$\\Delta$ Dissolved Pb [pM]', fontsize=7)\n",
     "    CBar.ax.tick_params(axis='y', length=0, labelsize=7)\n",
@@ -150,28 +155,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
-    "depth = 30 #10, 25, 30, 32\n",
+    "depth = 36 #10, 25, 30, 32\n",
     "for n, date in enumerate(dates1):\n",
-    "    fig = plot_layer(files1[n], files2[n], n, layer=depth, vmin=0, vmax=5)    \n",
-    "    fig.savefig(f'/ocean/brogalla/GEOTRACES/figures/Pb/animation/Atlantic-animation-z{depth}-highPb-{date[0:8]}.png', dpi=300)\n",
+    "    fig = plot_layer(files1[n], files2[n], n, layer=depth, vmin=0, vmax=0.01)    \n",
+    "    fig.savefig(f'/ocean/brogalla/GEOTRACES/figures/Pb/animation/Baffin-Bay-animation-z{depth}-tinyPb-{date[0:8]}.png', dpi=300)\n",
     "    plt.close(fig)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
-    "layer = 30\n",
+    "layer = 36\n",
     "\n",
     "#https://stackoverflow.com/questions/753190/programmatically-generate-video-or-animated-gif-in-python\n",
-    "filenames = np.sort(glob.glob(f'/ocean/brogalla/GEOTRACES/figures/Pb/animation/Atlantic-animation-z{layer}-highPb-*'))\n",
-    "with imageio.get_writer(f'/ocean/brogalla/GEOTRACES/figures/Pb/animation/Atlantic-z{layer}-highPb.mp4', \n",
+    "filenames = np.sort(glob.glob(f'/ocean/brogalla/GEOTRACES/figures/Pb/animation/Baffin-Bay-animation-z{layer}-tinyPb-*'))\n",
+    "with imageio.get_writer(f'/ocean/brogalla/GEOTRACES/figures/Pb/animation/Baffin-Bay-z{layer}-tinyPb.mp4', \n",
     "                        macro_block_size = None, fps=7, mode='I') as writer:\n",
     "    for filename in filenames:\n",
     "        image = imageio.imread(filename)\n",
