maps of model domains for thesis talk

--- a/paper3/E1-domain-map.ipynb
+++ b/paper3/E1-domain-map.ipynb
@@ -176,6 +176,79 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# domain dimensions:\n",
+    "imin, imax = 1479, 2179\n",
+    "jmin, jmax = 159, 799\n",
+    "\n",
+    "isize = imax-imin\n",
+    "jsize = jmax-jmin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax1, proj1, ax2, proj2 = pickle.load(open('/ocean/brogalla/GEOTRACES/pickles/Pb-map-globe.pickle','rb'))\n",
+    "\n",
+    "# Globe: --------------------------------------------------------------------------------------\n",
+    "x, y  = proj2(mesh_lon, mesh_lat) \n",
+    "\n",
+    "# Sub-domain\n",
+    "proj2.plot(x[imin:imax,jmin], y[imin:imax,jmin], 'w-', lw=0.9, zorder=3)\n",
+    "proj2.plot(x[imin:imax,jmax], y[imin:imax,jmax], 'w-', lw=0.9, zorder=3)\n",
+    "proj2.plot(x[imin,jmin:jmax], y[imin,jmin:jmax], 'w-', lw=0.9, zorder=3)\n",
+    "proj2.plot(x[imax,jmin:jmax], y[imax,jmin:jmax], 'w-', lw=0.9, zorder=3)\n",
+    "\n",
+    "# full domain\n",
+    "proj2.plot(x[460:-1:grid_reso,0]  , y[460:-1:grid_reso,0]  , 'w--', lw=0.8, zorder=3, dashes=(2, 2))\n",
+    "proj2.plot(x[0,370:-1:grid_reso]  , y[0,370:-1:grid_reso]  , 'w--', lw=0.8, zorder=3, dashes=(2, 2))\n",
+    "proj2.plot(x[100:-1:grid_reso,-1] , y[100:-1:grid_reso,-1] , 'w--', lw=0.8, zorder=3, dashes=(2, 2))\n",
+    "proj2.plot(x[-1,0:-1:grid_reso]   , y[-1,0:-1:grid_reso]   , 'w--', lw=0.8, zorder=3, dashes=(2, 2))\n",
+    "xline_add = [x[500,0], x[700,70], x[1100,0], x[0,370]]\n",
+    "yline_add = [y[240,-1], y[85,-80], y[80,0], y[0,370]]\n",
+    "proj2.plot(xline_add, yline_add, 'w--', lw=0.8, zorder=3, dashes=(2, 2))\n",
+    "\n",
+    "# Sub-domain map: ---------------------------------------------------------------------------\n",
+    "x_sub, y_sub  = proj1(mesh_lon, mesh_lat) \n",
+    "\n",
+    "# masked areas\n",
+    "hdept_plot = np.ma.masked_where(hdept >1500, hdept)\n",
+    "bath = proj1.contourf(x_sub, y_sub, hdept_plot, 17, cmap=matplotlib.cm.get_cmap('Blues'), vmin=-200, vmax=1500, zorder=1)\n",
+    "\n",
+    "# grid:\n",
+    "x_grid_plot = np.ma.masked_where((mesh_bathy[0,:,:] < 0.1), x_sub)\n",
+    "y_grid_plot = np.ma.masked_where((mesh_bathy[0,:,:] < 0.1), y_sub)\n",
+    "proj1.plot(x_grid_plot[imin:imax+grid_reso:grid_reso,jmin:jmax+grid_reso:grid_reso]  , \\\n",
+    "           y_grid_plot[imin:imax+grid_reso:grid_reso,jmin:jmax+grid_reso:grid_reso]  , 'w-', lw=0.2, zorder=3);\n",
+    "proj1.plot(x_grid_plot[imin:imax+grid_reso:grid_reso,jmin:jmax+grid_reso:grid_reso].T, \\\n",
+    "           y_grid_plot[imin:imax+grid_reso:grid_reso,jmin:jmax+grid_reso:grid_reso].T, 'w-', lw=0.2, zorder=3);\n",
+    "\n",
+    "proj1.drawcoastlines(color=land_outline_color, linewidth=0.6, zorder=4);\n",
+    "proj1.fillcontinents(color=land_color, lake_color=land_color, zorder=4);\n",
+    "\n",
+    "# Domain boundaries: \n",
+    "proj1.plot(x_sub[imin,jmin+200:jmax-100]  , y_sub[imin,jmin+200:jmax-100]  , 'w-', lw=1.5, zorder=5)\n",
+    "proj1.plot(x_sub[bdy_WCB[0],bdy_WCB[2]:bdy_WCB[3]], y_sub[bdy_WCB[0],bdy_WCB[2]:bdy_WCB[3]], '-', c='w', lw=1.5, zorder=4); \n",
+    "proj1.plot(x_sub[bdy_NCB[0]:bdy_NCB[1],bdy_NCB[2]], y_sub[bdy_NCB[0]:bdy_NCB[1],bdy_NCB[2]], '-', c='w', lw=1.5, zorder=4);\n",
+    "\n",
+    "# Color bar: --------------------------------------------------------------------------------\n",
+    "cbaxes = fig.add_axes([0.92, 0.15, 0.025, 0.3]);\n",
+    "CBar   = plt.colorbar(bath, ax=ax1, cax=cbaxes, ticks=[0,500,1000,1500]); \n",
+    "CBar.set_label('Ocean depth [m]', fontsize=5, labelpad=0)\n",
+    "CBar.ax.tick_params(axis='y', length=0, labelsize=5)\n",
+    "CBar.ax.set_yticklabels(['0','500','1000','>1500']); \n",
+    "\n",
+    "fig.savefig('/ocean/brogalla/GEOTRACES/figures/Mn-domain.jpg', bbox_inches='tight', dpi=300)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [
