--- a/paper3/M2-BC-transect.ipynb
+++ b/paper3/M2-BC-transect.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,10 +243,10 @@
     "        mesh_depth_adjusted = np.copy(gdepw1d)\n",
     "        if (bdy_ind[1]-bdy_ind[0]) < (bdy_ind[3]-bdy_ind[2]): # depending on orientation of boundary\n",
     "            bathy_ind           = mesh_mbathy[bdy_ind[0]+cell, bdy_ind[2]+n]\n",
-    "            mesh_depth_adjusted[0:int(bathy_ind)]  = hdepw[bdy_ind[0]+cell, bdy_ind[2]+n]\n",
+    "            mesh_depth_adjusted[0:int(bathy_ind)]  = mesh_hdepw[bdy_ind[0]+cell, bdy_ind[2]+n]\n",
     "        else:\n",
     "            bathy_ind           = mesh_mbathy[bdy_ind[0]+n, bdy_ind[2]+cell]\n",
-    "            mesh_depth_adjusted[0:int(bathy_ind)]  = hdepw[bdy_ind[0]+n, bdy_ind[2]+cell]\n",
+    "            mesh_depth_adjusted[0:int(bathy_ind)]  = mesh_hdepw[bdy_ind[0]+n, bdy_ind[2]+cell]\n",
     "\n",
     "        model_depths[:,n]    = mesh_depth_adjusted\n",
     "        model_distances[:,n] = bdy_distance[n]\n",
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
     "    CBar.set_label('Dissolved Pb [pM]', fontsize=6)\n",
     "    CBar.ax.tick_params(axis='y', length=2, width=0.8, labelsize=6)\n",
     "    \n",
-    "fig.savefig('/ocean/brogalla/GEOTRACES/figures/Pb/M2-transect-boundary.jpg', dpi=300, bbox_inches='tight')"
+    "# fig.savefig('/ocean/brogalla/GEOTRACES/figures/Pb/M2-transect-boundary.jpg', dpi=300, bbox_inches='tight')"
    ]
   },
   {
@@ -737,7 +737,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.11"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
