--- a/paper3/R5-Atlantic.ipynb
+++ b/paper3/R5-Atlantic.ipynb
@@ -98,7 +98,8 @@
     "mesh_hdept  = mesh['hdept'].values[0,:,:]\n",
     "mesh_hdepw  = mesh['hdepw'].values[0,:,:]\n",
     "mesh_mbathy = mesh['mbathy'].values[0,:,:]\n",
-    "mesh_gdepw  = mesh['gdepw_1d'].values[0,:]"
+    "mesh_gdepw  = mesh['gdepw_1d'].values[0,:]\n",
+    "mesh_gdept  = mesh['gdept_1d'].values[0,:]"
    ]
   },
   {
@@ -224,6 +225,65 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5750.0\n",
+      "5398.138\n",
+      "5500.001591038204\n",
+      "5727.916426592768\n",
+      "5727.9165\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.amax(mesh_hdepw))\n",
+    "print(np.amax(mesh_hdept))\n",
+    "print(np.amax(mesh_gdepw))\n",
+    "print(np.amax(mesh_gdept))\n",
+    "print(np.amax(mesh_depth))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mbathy [13 23 23 26]\n",
+      "t mbathy -1, 0\n",
+      "21.6, 25.2\n",
+      "109.7, 130.7\n",
+      "109.7, 130.7\n",
+      "186.1, 222.5\n",
+      "gdept [21.598815462135462, 109.72928079679241, 109.72928079679241, 186.12556727677588]\n",
+      "gdepw [19.989664076469126, 100.6260918181888, 100.6260918181888, 170.29385650225936]\n",
+      "gdepw [23.334992864497508, 119.71409305217685, 119.71409305217685, 203.4735238222038]\n",
+      "hdept [ 20.637276 102.748566 109.72928  186.12556 ]\n",
+      "hdepw [ 21.336008 105.0766   119.714096 203.47353 ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('mbathy', mesh_mbathy[DS_coords[0]+bdy_cell, bdy_LS[2]+31:bdy_LS[2]+35])\n",
+    "print('t mbathy -1, 0')\n",
+    "[print(f'{mesh_depth[ind-1]:.1f}, {mesh_depth[ind]:.1f}') for ind in mesh_mbathy[DS_coords[0]+bdy_cell, bdy_LS[2]+31:bdy_LS[2]+35]]\n",
+    "print('gdept', [mesh_gdept[ind-1] for ind in mesh_mbathy[DS_coords[0]+bdy_cell, bdy_LS[2]+31:bdy_LS[2]+35]])\n",
+    "print('gdepw', [mesh_gdepw[ind-1] for ind in mesh_mbathy[DS_coords[0]+bdy_cell, bdy_LS[2]+31:bdy_LS[2]+35]])\n",
+    "print('gdepw', [mesh_gdepw[ind] for ind in mesh_mbathy[DS_coords[0]+bdy_cell, bdy_LS[2]+31:bdy_LS[2]+35]])\n",
+    "print('hdept', mesh_hdept[DS_coords[0]+bdy_cell, bdy_LS[2]+31:bdy_LS[2]+35])\n",
+    "print('hdepw', mesh_hdepw[DS_coords[0]+bdy_cell, bdy_LS[2]+31:bdy_LS[2]+35])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -232,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
