--- a/paper3/forcing/scavenging-new-field.ipynb
+++ b/paper3/forcing/scavenging-new-field.ipynb
@@ -141,7 +141,7 @@
    "outputs": [],
    "source": [
     "def create_fields(save_folder, year, month, save=False,\n",
-    "                  alpha=1.0, beta=0.005, exponent=1, litho_max=np.nan, bio_max=np.nan):\n",
+    "                  alpha=np.nan, beta=0.005, exponent=1, litho_max=np.nan, bio_max=np.nan):\n",
     "    # optional arguments:\n",
     "    # - alpha     --- fraction of sinking particulate organic matter\n",
     "    # - beta      --- fraction of lithogenic particle contribution\n",
