make boundary conditions with slight adjustments for new experiments

--- a/paper3/forcing/create-TS-based-BCs.ipynb
+++ b/paper3/forcing/create-TS-based-BCs.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,27 +146,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_LS_BC(bdy_temp, bdy_sal, bdy_depth, mask=False):\n",
-    "    # Pb end-members: original \n",
+    "def create_LS_BC(bdy_temp, bdy_sal, bdy_depth, mask=False, sensitivity=False):\n",
     "    BBDW_Pb   = 2e-12  # Baffin Bay deep water Pb\n",
     "    AO_Pb     = 6e-12  # Arctic water Pb\n",
-    "    AW_Pb     = 30e-12 # Atlantic water Pb\n",
-    "    AOAW_Pb   = 25e-12 # Arctic-outflow Atlantic water Pb\n",
     "    AW_temp   = 5.2    # Atlantic Water temperature\n",
     "    BBDW_temp = 2.5    # Baffin Bay deep water temperature \n",
     "    AW_sal    = 35.2   # Atlantic Water salinity\n",
     "    PML_hot_Pb = 30e-12 # summer polar mixed layer Pb\n",
     "\n",
-    "#     # Pb end-members: sensitivity study\n",
-    "#     AW_Pb     = 35e-12 # Atlantic water Pb\n",
-    "#     AOAW_Pb   = 30e-12 # Arctic-outflow Atlantic water Pb\n",
+    "    if sensitivity: # Pb end-members: sensitivity study\n",
+    "        AW_Pb     = 35e-12 # Atlantic water Pb\n",
+    "        AOAW_Pb   = 30e-12 # Arctic-outflow Atlantic water Pb\n",
+    "    else: # Pb end-members: original \n",
+    "        AW_Pb     = 30e-12 # Atlantic water Pb\n",
+    "        AOAW_Pb   = 25e-12 # Arctic-outflow Atlantic water Pb\n",
     "\n",
     "    # Linear interpolate salinity endpoints:\n",
-    "    end_sal = [33.0, AW_sal]\n",
+    "    end_sal = [32.0, AW_sal]\n",
     "    end_dPb = [AO_Pb, AOAW_Pb]\n",
     "    dPb_BC  = np.interp(bdy_sal, end_sal, end_dPb)\n",
     "        \n",
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
     "\n",
     "    # increase ACW\n",
     "    end_temp_ACW = [1.5, 2.5]\n",
-    "    end_dPb_ACW  = [6e-12, 10e-12]\n",
+    "    end_dPb_ACW  = [7e-12, 14e-12]\n",
     "    dPb_BC[(bdy_temp > 1.5)] = np.interp(bdy_temp[(bdy_temp > 1.5)], end_temp_ACW, end_dPb_ACW)\n",
     "    \n",
     "    # wBSW to AL\n",
@@ -248,19 +248,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_HB_BC(bdy_temp, bdy_sal):\n",
-    "    # Pb end-members: original\n",
-    "    PML_Pb   = 3e-12   # Polar Mixed Layer Pb\n",
-    "    AL_Pb    = 5e-12   # Atlantic Water Pb\n",
+    "def create_HB_BC(bdy_temp, bdy_sal, sensitivity=False):\n",
     "\n",
-    "#     # Pb end-members: sensitivity experiment\n",
-    "#     PML_Pb   = 5e-12   # Polar Mixed Layer Pb\n",
-    "#     AL_Pb    = 10e-12   # Atlantic Water Pb\n",
-    "    \n",
+    "    if sensitivity: # Pb end-members: sensitivity experiment\n",
+    "        PML_Pb   = 5e-12   # Polar Mixed Layer Pb\n",
+    "        AL_Pb    = 10e-12   # Atlantic Water Pb\n",
+    "    else: # Pb end-members: original\n",
+    "        PML_Pb   = 3e-12   # Polar Mixed Layer Pb\n",
+    "        AL_Pb    = 5e-12   # Atlantic Water Pb\n",
+    "\n",
     "    PML_sal   = 29      # Polar mixed layer salinity max\n",
     "    AL_sal    = 34.8    # Atlantic Water salinity min\n",
     "    \n",
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,11 +303,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def save_file(year, month):    \n",
+    "def save_file(year, month, sensitivity_LS=False, sensitivity_HB=False):    \n",
     "    file_write = xr.Dataset(\n",
     "        {'dPb_N' : ((\"time_counter\",\"deptht\",\"y\",\"x1\"), dPb_north_BC), \\\n",
     "         'dPb_S' : ((\"time_counter\",\"deptht\",\"y\",\"x2\"), dPb_south_BC), \\\n",
@@ -323,11 +323,15 @@
     "            \"x4\": np.zeros(np.max(dPb_west_BC.shape))\n",
     "        },\n",
     "    )\n",
-    "    file_write.to_netcdf(f'/ocean/brogalla/GEOTRACES/data/Pb-tuning-202303/Pb_OBC_y{year}m{month:02}.nc', \\\n",
-    "                         unlimited_dims='time_counter')\n",
-    "#     file_write.to_netcdf(f'/ocean/brogalla/GEOTRACES/data/Pb-tuning-202302/Labrador_Sea_sensitivity/Pb_OBC_y{year}m{month:02}.nc', \\\n",
-    "#                          unlimited_dims='time_counter')\n",
-    "    \n",
+    "    if sensitivity_LS:\n",
+    "        file_write.to_netcdf(f'/ocean/brogalla/GEOTRACES/data/Pb-forcing-202311/Labrador-Atlantic/Pb_OBC_y{year}m{month:02}.nc', \\\n",
+    "                             unlimited_dims='time_counter')\n",
+    "    elif sensitivity_HB:\n",
+    "        file_write.to_netcdf(f'/ocean/brogalla/GEOTRACES/data/Pb-forcing-202311/Hudson-Bay/Pb_OBC_y{year}m{month:02}.nc', \\\n",
+    "                             unlimited_dims='time_counter')\n",
+    "    else:\n",
+    "        file_write.to_netcdf(f'/ocean/brogalla/GEOTRACES/data/Pb-forcing-202311/reference/Pb_OBC_y{year}m{month:02}.nc', \\\n",
+    "                             unlimited_dims='time_counter')\n",
     "    return"
    ]
   },
@@ -340,13 +344,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "2002\n",
+      "North BC # of NaNs: 0\n",
+      "East BC # of NaNs:  0\n",
+      "South BC # of NaNs: 0\n",
+      "West BC # of NaNs:  0\n",
+      "2003\n",
+      "North BC # of NaNs: 0\n",
+      "East BC # of NaNs:  0\n",
+      "South BC # of NaNs: 0\n",
+      "West BC # of NaNs:  0\n",
+      "2004\n",
+      "North BC # of NaNs: 0\n",
+      "East BC # of NaNs:  0\n",
+      "South BC # of NaNs: 0\n",
+      "West BC # of NaNs:  0\n",
+      "2005\n",
+      "North BC # of NaNs: 0\n",
+      "East BC # of NaNs:  0\n",
+      "South BC # of NaNs: 0\n",
+      "West BC # of NaNs:  0\n",
+      "2006\n",
+      "North BC # of NaNs: 0\n",
+      "East BC # of NaNs:  0\n",
+      "South BC # of NaNs: 0\n",
+      "West BC # of NaNs:  0\n",
+      "2007\n",
+      "North BC # of NaNs: 0\n",
+      "East BC # of NaNs:  0\n",
+      "South BC # of NaNs: 0\n",
+      "West BC # of NaNs:  0\n",
+      "2008\n",
+      "North BC # of NaNs: 0\n",
+      "East BC # of NaNs:  0\n",
+      "South BC # of NaNs: 0\n",
+      "West BC # of NaNs:  0\n",
+      "2009\n",
+      "North BC # of NaNs: 0\n",
+      "East BC # of NaNs:  0\n",
+      "South BC # of NaNs: 0\n",
+      "West BC # of NaNs:  0\n",
       "2010\n",
       "North BC # of NaNs: 0\n",
       "East BC # of NaNs:  0\n",
@@ -396,12 +440,17 @@
       "North BC # of NaNs: 0\n",
       "East BC # of NaNs:  0\n",
       "South BC # of NaNs: 0\n",
+      "West BC # of NaNs:  0\n",
+      "2020\n",
+      "North BC # of NaNs: 0\n",
+      "East BC # of NaNs:  0\n",
+      "South BC # of NaNs: 0\n",
       "West BC # of NaNs:  0\n"
      ]
     }
    ],
    "source": [
-    "for year in range(2010,2020):\n",
+    "for year in range(2002,2021):\n",
     "\n",
     "    print(year)\n",
     "    LS_T  = np.zeros((12,50,bdy_LS[1]-bdy_LS[0],bdy_LS[3]-bdy_LS[2]));     LS_S  = np.zeros((12,50,bdy_LS[1]-bdy_LS[0],bdy_LS[3]-bdy_LS[2]));\n",
@@ -430,13 +479,13 @@
     "\n",
     "    for month in range(1,13):\n",
     "        if (month > 5) & (month < 12):\n",
-    "            dPb_LS[month-1,:,:,:]  = create_LS_BC(LS_T[month-1] , LS_S[month-1], LS_depth, mask=True)\n",
+    "            dPb_LS[month-1,:,:,:]  = create_LS_BC(LS_T[month-1] , LS_S[month-1], LS_depth, mask=True, sensitivity=False)\n",
     "        else:\n",
-    "            dPb_LS[month-1,:,:,:]  = create_LS_BC(LS_T[month-1] , LS_S[month-1], LS_depth, mask=False)\n",
+    "            dPb_LS[month-1,:,:,:]  = create_LS_BC(LS_T[month-1] , LS_S[month-1], LS_depth, mask=False, sensitivity=False)\n",
     "        \n",
     "        dPb_nCB[month-1,:,:,:] = create_AO_BC(nCB_T[month-1], nCB_S[month-1])\n",
     "        dPb_wCB[month-1,:,:,:] = create_AO_BC(wCB_T[month-1], wCB_S[month-1])\n",
-    "        dPb_HB[month-1,:,:,:]  = create_HB_BC(HB_T[month-1] , HB_S[month-1])    \n",
+    "        dPb_HB[month-1,:,:,:]  = create_HB_BC(HB_T[month-1] , HB_S[month-1], sensitivity=True)    \n",
     "    \n",
     "    dPb_LS[np.isnan(dPb_LS)]   = 3e-12\n",
     "    dPb_nCB[np.isnan(dPb_nCB)] = 3e-12\n",
@@ -452,7 +501,7 @@
     "        dPb_south_BC = reshape_boundary(rimwidthS, dPb_LS[month-1], 'C')\n",
     "        dPb_west_BC  = reshape_boundary(rimwidthW, dPb_HB[month-1], 'F')\n",
     "\n",
-    "        save_file(year, month)\n",
+    "        save_file(year, month, sensitivity_HB=True, sensitivity_LS=False)\n",
     "        \n",
     "    # Check that there are no NaN values in the files:\n",
     "    print('North BC # of NaNs:', sum(dPb_north_BC[np.isnan(dPb_north_BC)]))\n",
